res/pod-security-context.yaml
apiVersion: v1
kind: Pod
metadata:
  name: security-context
spec:
  securityContext:
    runAsUser: 1000
    runAsGroup: 3000
    fsGroup: 2000
  volumes:
  - name: datavol
    emptyDir: {}
  containers:
  - name: main
    image: amazonlinux:2
    command: [ "sh", "-c", "sleep 3600" ]
    volumeMounts:
    - name: datavol
      mountPath: /data
    securityContext:
      allowPrivilegeEscalation: false
